--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
 	 					 <button type="submit" class="btn btn-primary" onclick="myfunction()">Submit</button>
 			      </form>
 		    </div>
-		    <div class="col text-center" style="background-color: #C0C0C0; display: grid;">
+		    <div class="col text-center" style="background-color: #b6def2; display: grid;">
 		    <h1 style="text-align: center;">Find Us On</h1>
 		      <div class="row">
 		      	<a href="tel:091111111"><i class="fas fa-mobile-alt fa-8x mx-2" id="ph"></i></a>
