--- a/artist/johannes.html
+++ b/artist/johannes.html
@@ -38,8 +38,8 @@
 	<div class="artist container my-3">
 		<h1>Johannes Vermeer</h1>
 		<hr class="johannes">		
-		<a href="../artist.html" class="btn">Return to list of Artist</a>
-		<a href="johannes-bio.html" class="btn">Biography</a>
+		<a href="../artist.html" class="btn btn-info">Return to list of Artist</a>
+		<a href="johannes-bio.html" class="btn btn-info">Biography</a>
 
 		 <!-- artists' photos -->
 		<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3">	
