--- a/about.html
+++ b/about.html
@@ -11,6 +11,11 @@
       <link href="https://fonts.googleapis.com/css2?family=Imbue:wght@300&display=swap" rel="stylesheet">
       <link rel="preconnect" href="https://fonts.gstatic.com">
       <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@100&display=swap" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
+
 	<style type="text/css">
 		*{
 			margin: 0;
@@ -20,36 +25,38 @@
 </head>
 <body>
 	<!-- nav start -->
-    <nav class="navbar navbar-expand-lg bg-light navbar-light shadow" id="nav">
+      <nav class="navbar navbar-expand-lg navbar-light shadow" id="nav">
          <div class="container">
             <img src="image/logo2.png" class="logo_img" width="100" height="70">
-            <a href="" class="navbar-brand logo me-auto px-5" id="name">Heaven's Secret</a>
+            <a href="" class="navbar-brand logo me-auto px-3" id="name">
+               <h3>Heaven's Secret</h3>
+            </a>
             <button class="navbar-toggler" data-bs-target="#Navbar" data-bs-toggle="collapse">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="Navbar">
                <ul class="navbar-nav nav-fill ms-auto">
                   <li class="nav-item mx-4"><a href="index.html" class="nav-link">Home</a></li>
-                  <li class="nav-item mx-4"><a href="artist.html" class="nav-link">Artist</a></li>      
+                  <li class="nav-item mx-4"><a href="artist.html" class="nav-link">Artist</a></li>
                   <li class="nav-item mx-4"><a href="gallery.html" class="nav-link">Gallery</a></li>
                   <li class="nav-item mx-4"><a href="about.html" class="nav-link">About</a></li>
                   <li class="nav-item mx-4"><a href="contact.html" class="nav-link">Contact</a></li>
                </ul>
             </div>
          </div>
-    </nav>
-    <!-- nav end -->
+      </nav>
+      <!-- nav end -->
 	<!-- about us start -->
 	<img src="image/team.png" width="100%" height="400"><br>
-	<h1 style="text-align: center;">About Us</h1><hr class="about"><br>
+	<h1 class="titlefont" style="text-align: center;">About Us</h1><hr class="about"><br>
 	<div class="container">
 		<div class="row">
 		<div class="col col-sm-12 col-md-12 col-lg-6 col-xl-6">
-			<h1 class="text-center">What we do</h1>
+			<h2 class="titlefont text-center">What we do</h2>
 			<p style="display: grid; text-align: justify;">We have displayed many of the vareity of arts from all around the world with the help of our supporters. Our Works Cannot be come true without your help. Our collection will not be attractive by viewers but it's worth your time seeing.We support other collectors to join us.</p>
 		</div>
 		<div class="col col-sm-12 col-md-12 col-lg-6 col-xl-6">
-			<h1 class="text-center">Our Team</h1>
+			<h2 class="titlefont text-center">Our Team</h2>
 			<p style="display: grid; text-align: justify;">We are a group of artist from all around Asia and Europe helping to Heavens Secret to become a well known art museum. We are very grateful that you are interested in our works of collections of arts and We will continue colleting and making new artworks. We are passionate about our artworks. </p>
 		</div>
 		</div>
@@ -60,7 +67,7 @@
 				<img src="image/guy.jpg" style="width: 100%; height: 700px;display:block ;object-fit: cover;padding: 30px;"class="rounded-circle">
 			</div>
 			<div class="col-sm-12 col-md-12 col-lg-6 col-lg-6" style="padding:30px;">
-				<h1 style="text-align: center;">Hi! I'm Ronney!</h1>
+				<h2 class="titlefont" style="text-align: center;">Hi! I'm Ronney!</h2>
 				<p style="display: grid; text-align: justify;">I'm founder and CEO of Heaven's Secrets. I was graduated from Rhode Island Schools Of Designs. I started to interest in at by visiting british museum while I'm on my Business Trip to London. I started collecting famous art around the world. I got funded by United Nations World Heritage program for making this work.</p>
 				<p style="display: grid; text-align: justify;">As principal at Heavens Secrets, I uses my design experience to support brands of all sizes in telling their stories through timeless visuals and strategic thinking. Steve’s philosophy of continuity, resilience and simplicity result in elegant and sophisticated works aimed to stand the test of time. As a true artisan, when not in front of his computer, Steve can be found painting in his garage, seeking inspiration in antique shops, or traveling the globe.</p>
 				<p style="display: grid;text-align: justify;">Ronney provides the structure needed for our artistry to flourish here at Heavens Secrets. I is an organizational guru, and infuses my savvy into our daily operations, marketing, process development, and project management. Our consistent delivery and results directly correspond to my analytical and technical prowess. Out of the office, Danielle can be found unleashing my creativity through paper crafting and dancing.</p>
@@ -69,14 +76,14 @@
 		</div>
 	</div>
 	<!-- footer start -->
-    <footer class="container-fluid bg-dark text-center mt-5">
+      <footer class="container-fluid text-center mt-5" id="ft">
          <div class="py-5">
-            <a href="index.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Home</a>
-            <a href="artist.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Artist</a>
-            <a href="gallery.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Gallery</a>
-            <a href="about.html" class="mx-3 mx-md-4 text-decoration-none text-muted">About</a>
-            <a href="contact.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Contact</a>
-            <p class="text-muted my-3">CopyRight Heaven's Secret @ 2021</p>
+            <a href="index.htmls" class="mx-3 mx-md-4 text-decoration-none text-dark">Home</a>
+            <a href="artist.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Artist</a>
+            <a href="gallery.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Gallery</a>
+            <a href="about.html" class="mx-3 mx-md-4 text-decoration-none text-dark">About</a>
+            <a href="contact.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Contact</a>
+            <p class="text-dark my-3">CopyRight Heaven's Secret @ 2021</p>
             <p class="text-muted">
                <a href="tel:091111111"><i class="fas fa-mobile-alt fa-2x mx-2" id="ph"></i></a>
                <a href="http://facebook.com"><i class="fab fa-facebook-square fa-2x mx-2" id="fb"></i></a>
@@ -84,8 +91,8 @@
                <a href="http://gmail.com"><i class="fas fa-envelope-open-text fa-2x mx-2" id="mail"></i></a>
             </p>
          </div>
-    </footer>
-    <!-- footer end -->
+      </footer>
+      <!-- footer end -->
 	<script type="text/javascript" src="bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
