--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,9 @@
       <link href="https://fonts.googleapis.com/css2?family=Imbue:wght@300&display=swap" rel="stylesheet">
       <link rel="preconnect" href="https://fonts.gstatic.com">
       <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+	  <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@100&display=swap" rel="stylesheet">
+	  <link rel="preconnect" href="https://fonts.gstatic.com">
+	  <link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
 	<style type="text/css">
 		*{
 			margin: 0;
@@ -20,10 +23,12 @@
 </head>
 <body>
 	<!-- nav start -->
-      <nav class="navbar navbar-expand-lg bg-light navbar-light shadow" id="nav">
+      <nav class="navbar navbar-expand-lg navbar-light shadow" id="nav">
          <div class="container">
             <img src="image/logo2.png" class="logo_img" width="100" height="70">
-            <a href="" class="navbar-brand logo me-auto px-5" id="name">Heaven's Secret</a>
+            <a href="" class="navbar-brand logo me-auto px-3" id="name">
+               <h3>Heaven's Secret</h3>
+            </a>
             <button class="navbar-toggler" data-bs-target="#Navbar" data-bs-toggle="collapse">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -31,22 +36,6 @@
                <ul class="navbar-nav nav-fill ms-auto">
                   <li class="nav-item mx-4"><a href="index.html" class="nav-link">Home</a></li>
                   <li class="nav-item mx-4"><a href="artist.html" class="nav-link">Artist</a></li>
-                  <!-- <li class="nav-item dropdown">
-                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="artist.html" role="button" aria-expanded="false">Artist</a>
-                     <ul class="dropdown-menu">
-                       <li><a class="dropdown-item" href="#">Pablo Picasso</a></li>
-                       <li><a class="dropdown-item" href="#">Vincent van Gogh</a></li>
-                       <li><a class="dropdown-item" href="#">Salvador Dali</a></li>
-                       <li><a class="dropdown-item" href="#">Leonardo da Vinci</a></li>
-                        
-                       <li><a class="dropdown-item" href="#">Claude Monet</a></li>
-                       <li><a class="dropdown-item" href="#">Johannes Vermeer</a></li>
-                       <li><a class="dropdown-item" href="#">James Abbott McNeill Whistler</a></li>
-                       <li><a class="dropdown-item" href="#">Gustav Klimt</a></li>
-                       <li><a class="dropdown-item" href="#">Jan van Eyck</a></li>
-                       <li><a class="dropdown-item" href="#">Georges Seura</a></li>
-                     </ul>
-                     </li> -->
                   <li class="nav-item mx-4"><a href="gallery.html" class="nav-link">Gallery</a></li>
                   <li class="nav-item mx-4"><a href="about.html" class="nav-link">About</a></li>
                   <li class="nav-item mx-4"><a href="contact.html" class="nav-link">Contact</a></li>
@@ -62,7 +51,7 @@
 		    <div class="col col-sm-12 col-md-12 col-lg-6 col-xl-6 bg-light" style="display: grid;">
 			      <img src="image/logo2.png" class="logo_img" width="200" height="140" style="margin: 50px 150px 20px 150px;">
 			      <form>
-			      	<h1>Get In Touch</h1>
+			      	<h1 class="titlefont">Get In Touch</h1>
 			      	<p>We'll reply to your message instantly</p>
 			      	<div class="mb-3">
 			      		<label for="InputName" class="form-label">Name</label>
@@ -72,6 +61,10 @@
 					  	<label for="InputEmail" class="form-label">Email address</label>
 					    <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp">
 					  </div>
+					  <!-- <div class="mb-3">
+					  	<label for="Inputph" class="form-label">Phone Number</label>
+					    <input type="number" class="form-control" id="Inputph" aria-describedby="phHelp">
+					  </div> -->
 					  <div class="mb-3">
 						  <label for="Message" class="form-label">Message</label>
 						  <textarea class="form-control" id="Message" rows="3"></textarea>
@@ -80,7 +73,7 @@
 			      </form>
 		    </div>
 		    <div class="col text-center" style="background-color: #b6def2; display: grid;">
-		    <h1 style="text-align: center;">Find Us On</h1>
+		    <h1 class="titlefont" style="text-align: center;">Find Us On</h1>
 		      <div class="row">
 		      	<a href="tel:091111111"><i class="fas fa-mobile-alt fa-8x mx-2" id="ph"></i></a>
 		      </div>
@@ -103,24 +96,23 @@
 	<!-- map ends -->
 	<br>
 	<!-- footer start -->
-	<footer class="container-fluid bg-dark text-center">
-
-		<div class="py-5">
-			<a href="index.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Home</a>
-			<a href="artist.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Artist</a>
-			<a href="gallery.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Gallery</a>
-			<a href="about.html" class="mx-3 mx-md-4 text-decoration-none text-muted">About</a>
-			<a href="contact.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Contact</a>
-			<p class="text-muted my-3">CopyRight Heaven's Secret @ 2021</p>
-			<p class="text-muted">
-				<a href="tel:091111111"><i class="fas fa-mobile-alt fa-2x mx-2" id="ph"></i></a>
-				<a href="http://facebook.com"><i class="fab fa-facebook-square fa-2x mx-2" id="fb"></i></a>
-				<a href="http://viber.com"><i class="fab fa-viber fa-2x mx-2" id="vb"></i></a>
-				<a href="http://gmail.com"><i class="fas fa-envelope-open-text fa-2x mx-2" id="mail"></i></a></p>
-		</div>
-
-	</footer>
-	<!-- footer end -->
+      <footer class="container-fluid text-center mt-5" id="ft">
+         <div class="py-5">
+            <a href="index.htmls" class="mx-3 mx-md-4 text-decoration-none text-dark">Home</a>
+            <a href="artist.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Artist</a>
+            <a href="gallery.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Gallery</a>
+            <a href="about.html" class="mx-3 mx-md-4 text-decoration-none text-dark">About</a>
+            <a href="contact.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Contact</a>
+            <p class="text-dark my-3">CopyRight Heaven's Secret @ 2021</p>
+            <p class="text-muted">
+               <a href="tel:091111111"><i class="fas fa-mobile-alt fa-2x mx-2" id="ph"></i></a>
+               <a href="http://facebook.com"><i class="fab fa-facebook-square fa-2x mx-2" id="fb"></i></a>
+               <a href="http://viber.com"><i class="fab fa-viber fa-2x mx-2" id="vb"></i></a>
+               <a href="http://gmail.com"><i class="fas fa-envelope-open-text fa-2x mx-2" id="mail"></i></a>
+            </p>
+         </div>
+      </footer>
+      <!-- footer end -->
 	
 	<script type="text/javascript" src="bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
