--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <!-- footer start -->
       <footer class="container-fluid text-center mt-5" id="ft">
          <div class="py-5">
-            <a href="index.htmls" class="mx-3 mx-md-4 text-decoration-none text-dark">Home</a>
+            <a href="index.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Home</a>
             <a href="artist.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Artist</a>
             <a href="gallery.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Gallery</a>
             <a href="about.html" class="mx-3 mx-md-4 text-decoration-none text-dark">About</a>
@@ -107,7 +107,7 @@
          </div>
       </footer>
       <!-- footer end -->
-      
+
       <script type="text/javascript" src="bootstrap/js/bootstrap.bundle.min.js"></script>
       <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
