--- a/artist.html
+++ b/artist.html
@@ -19,17 +19,19 @@
 </head>
 <body>
 	<!-- nav start -->
-    <nav class="navbar navbar-expand-lg bg-light navbar-light shadow" id="nav">
+    <nav class="navbar navbar-expand-lg navbar-light shadow" id="nav">
          <div class="container">
             <img src="image/logo2.png" class="logo_img" width="100" height="70">
-            <a href="" class="navbar-brand logo me-auto px-5" id="name">Heaven's Secret</a>
+            <a href="" class="navbar-brand logo me-auto px-3" id="name">
+               <h3>Heaven's Secret</h3>
+            </a>
             <button class="navbar-toggler" data-bs-target="#Navbar" data-bs-toggle="collapse">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="Navbar">
                <ul class="navbar-nav nav-fill ms-auto">
                   <li class="nav-item mx-4"><a href="index.html" class="nav-link">Home</a></li>
-                  <li class="nav-item mx-4"><a href="artist.html" class="nav-link">Artist</a></li>      
+                  <li class="nav-item mx-4"><a href="artist.html" class="nav-link">Artist</a></li>
                   <li class="nav-item mx-4"><a href="gallery.html" class="nav-link">Gallery</a></li>
                   <li class="nav-item mx-4"><a href="about.html" class="nav-link">About</a></li>
                   <li class="nav-item mx-4"><a href="contact.html" class="nav-link">Contact</a></li>
@@ -262,14 +264,14 @@
 	<!-- artist page end -->
 
 	<!-- footer start -->
-    <footer class="container-fluid bg-dark text-center mt-5">
+      <footer class="container-fluid text-center mt-5" id="ft">
          <div class="py-5">
-            <a href="index.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Home</a>
-            <a href="artist.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Artist</a>
-            <a href="gallery.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Gallery</a>
-            <a href="about.html" class="mx-3 mx-md-4 text-decoration-none text-muted">About</a>
-            <a href="contact.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Contact</a>
-            <p class="text-muted my-3">CopyRight Heaven's Secret @ 2021</p>
+            <a href="index.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Home</a>
+            <a href="artist.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Artist</a>
+            <a href="gallery.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Gallery</a>
+            <a href="about.html" class="mx-3 mx-md-4 text-decoration-none text-dark">About</a>
+            <a href="contact.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Contact</a>
+            <p class="text-dark my-3">CopyRight Heaven's Secret @ 2021</p>
             <p class="text-muted">
                <a href="tel:091111111"><i class="fas fa-mobile-alt fa-2x mx-2" id="ph"></i></a>
                <a href="http://facebook.com"><i class="fab fa-facebook-square fa-2x mx-2" id="fb"></i></a>
@@ -277,7 +279,7 @@
                <a href="http://gmail.com"><i class="fas fa-envelope-open-text fa-2x mx-2" id="mail"></i></a>
             </p>
          </div>
-    </footer>
+      </footer>
     <!-- footer end -->
 
 	<script type="text/javascript" src="bootstrap/js/bootstrap.bundle.min.js"></script>
