--- a/contact.html
+++ b/contact.html
@@ -20,10 +20,12 @@
 </head>
 <body>
 	<!-- nav start -->
-      <nav class="navbar navbar-expand-lg bg-light navbar-light shadow" id="nav">
+      <nav class="navbar navbar-expand-lg navbar-light shadow" id="nav">
          <div class="container">
             <img src="image/logo2.png" class="logo_img" width="100" height="70">
-            <a href="" class="navbar-brand logo me-auto px-5" id="name">Heaven's Secret</a>
+            <a href="" class="navbar-brand logo me-auto px-3" id="name">
+               <h3>Heaven's Secret</h3>
+            </a>
             <button class="navbar-toggler" data-bs-target="#Navbar" data-bs-toggle="collapse">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -31,22 +33,6 @@
                <ul class="navbar-nav nav-fill ms-auto">
                   <li class="nav-item mx-4"><a href="index.html" class="nav-link">Home</a></li>
                   <li class="nav-item mx-4"><a href="artist.html" class="nav-link">Artist</a></li>
-                  <!-- <li class="nav-item dropdown">
-                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="artist.html" role="button" aria-expanded="false">Artist</a>
-                     <ul class="dropdown-menu">
-                       <li><a class="dropdown-item" href="#">Pablo Picasso</a></li>
-                       <li><a class="dropdown-item" href="#">Vincent van Gogh</a></li>
-                       <li><a class="dropdown-item" href="#">Salvador Dali</a></li>
-                       <li><a class="dropdown-item" href="#">Leonardo da Vinci</a></li>
-                        
-                       <li><a class="dropdown-item" href="#">Claude Monet</a></li>
-                       <li><a class="dropdown-item" href="#">Johannes Vermeer</a></li>
-                       <li><a class="dropdown-item" href="#">James Abbott McNeill Whistler</a></li>
-                       <li><a class="dropdown-item" href="#">Gustav Klimt</a></li>
-                       <li><a class="dropdown-item" href="#">Jan van Eyck</a></li>
-                       <li><a class="dropdown-item" href="#">Georges Seura</a></li>
-                     </ul>
-                     </li> -->
                   <li class="nav-item mx-4"><a href="gallery.html" class="nav-link">Gallery</a></li>
                   <li class="nav-item mx-4"><a href="about.html" class="nav-link">About</a></li>
                   <li class="nav-item mx-4"><a href="contact.html" class="nav-link">Contact</a></li>
@@ -54,7 +40,7 @@
             </div>
          </div>
       </nav>
-      <!-- nav end -->
+      <!-- nav end --> 
 	<br>
 	<!-- contact form starts -->
 	<div class="container">
@@ -103,24 +89,23 @@
 	<!-- map ends -->
 	<br>
 	<!-- footer start -->
-	<footer class="container-fluid bg-dark text-center">
-
-		<div class="py-5">
-			<a href="index.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Home</a>
-			<a href="artist.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Artist</a>
-			<a href="gallery.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Gallery</a>
-			<a href="about.html" class="mx-3 mx-md-4 text-decoration-none text-muted">About</a>
-			<a href="contact.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Contact</a>
-			<p class="text-muted my-3">CopyRight Heaven's Secret @ 2021</p>
-			<p class="text-muted">
-				<a href="tel:091111111"><i class="fas fa-mobile-alt fa-2x mx-2" id="ph"></i></a>
-				<a href="http://facebook.com"><i class="fab fa-facebook-square fa-2x mx-2" id="fb"></i></a>
-				<a href="http://viber.com"><i class="fab fa-viber fa-2x mx-2" id="vb"></i></a>
-				<a href="http://gmail.com"><i class="fas fa-envelope-open-text fa-2x mx-2" id="mail"></i></a></p>
-		</div>
-
-	</footer>
-	<!-- footer end -->
+      <footer class="container-fluid text-center mt-5" id="ft">
+         <div class="py-5">
+            <a href="index.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Home</a>
+            <a href="artist.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Artist</a>
+            <a href="gallery.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Gallery</a>
+            <a href="about.html" class="mx-3 mx-md-4 text-decoration-none text-dark">About</a>
+            <a href="contact.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Contact</a>
+            <p class="text-dark my-3">CopyRight Heaven's Secret @ 2021</p>
+            <p class="text-muted">
+               <a href="tel:091111111"><i class="fas fa-mobile-alt fa-2x mx-2" id="ph"></i></a>
+               <a href="http://facebook.com"><i class="fab fa-facebook-square fa-2x mx-2" id="fb"></i></a>
+               <a href="http://viber.com"><i class="fab fa-viber fa-2x mx-2" id="vb"></i></a>
+               <a href="http://gmail.com"><i class="fas fa-envelope-open-text fa-2x mx-2" id="mail"></i></a>
+            </p>
+         </div>
+      </footer>
+      <!-- footer end -->
 	
 	<script type="text/javascript" src="bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
