--- a/gallery.html
+++ b/gallery.html
@@ -67,7 +67,7 @@
 
 	<div class="container my-5 pt-3">
 		<h1 class="titlefont text-center">Gallery</h1>
-		<hr class="divided">
+		<hr class="divided1">
 		<div class="row my-5 row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3">
 
 
