--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
    <head>
@@ -44,17 +42,14 @@
          <div class="carousel-inner">
             <div class="carousel-item active">
                <img src="image/banner11.jpg" class="img-fluid w-100">
-               <div class="carousel_text d-none d-md-block">
-                  <h3 id="wlcm">Welcome to our <br>Heaven's Secret Art Gallery!</h3>
-               </div>
             </div>
             <div class="carousel-item">
                <img src="image/banner22.jpg" class="img-fluid w-100">
                <!-- <img src="image/banner33.jpg" class="img-fluid w-100"> -->
-               <div class="quote">
+               <!-- <div class="quote">
                   "Art is never finished, only abandoned."
                   <p style="text-align:right">Leonardo da Vinci</p>
-               </div>
+               </div> -->
             </div>
          </div>
          <a href="#Carousel" class="carousel-control-prev" data-bs-slide="prev">
@@ -65,7 +60,15 @@
          </a>
       </div>
       <!-- carousel end -->
-
+      <div>
+                  <h3 id="wlcm">Welcome to our Heaven's Secret Art Gallery!</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+               </div>
       <!-- background start --><!--  slide start -->
       <div class="container-fluid background_img">
          <div class="row text-light text-center">
