--- a/contact.html
+++ b/contact.html
@@ -48,12 +48,10 @@
 	<!-- contact form starts -->
 	<div class="container">
 		<div class="row">
-		    <div class="col col-sm-12 col-md-12 col-lg-6 col-xl-6 bg-light" style="display: grid;">
-			      <img src="image/logo2.png" class="logo_img" width="200" height="140" style="margin: 50px 150px 20px 150px;">
-			      <form>
-			      	<h1 class="titlefont">Get In Touch</h1>
-			      	<p>We'll reply to your message instantly</p>
-			      	<div class="mb-3">
+			<div class="col-sm-12 col-lg-7 px-5 ">
+				<h1 class="my-3">Contact form</h1>
+				<form>
+			      	  <div class="mb-3">
 			      		<label for="InputName" class="form-label">Name</label>
 					    <input type="name" class="form-control" id="InputName" aria-describedby="nameHelp">
 					  </div>
@@ -61,34 +59,63 @@
 					  	<label for="InputEmail" class="form-label">Email address</label>
 					    <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp">
 					  </div>
-					  <!-- <div class="mb-3">
-					  	<label for="Inputph" class="form-label">Phone Number</label>
-					    <input type="number" class="form-control" id="Inputph" aria-describedby="phHelp">
-					  </div> -->
+					  <div class="mb-3">
+			      		<label for="InputName" class="form-label">Phone number</label>
+					    <input type="number" class="form-control" id="InputName" aria-describedby="nameHelp">
+					  </div>
 					  <div class="mb-3">
 						  <label for="Message" class="form-label">Message</label>
 						  <textarea class="form-control" id="Message" rows="3"></textarea>
-						</div>
-	 					 <button type="submit" class="btn btn-primary" onclick="myfunction()">Submit</button>
-			      </form>
+					  </div>
+						<button type="submit" class="btn btn-primary" onclick="myfunction()">Submit</button>
+				</form>
+			</div>
+		</div>
+	</div>
+
+
+	<div class="container my-5">
+		<div class="row">
+		    <!-- div class="col-sm-12 col-md-6 col-xl-3">
+		    	<div class="row my-3">
+				   	<div class="col col-1">
+				     		<i class="fas fa-map-marker-alt fa-2x"></i>
+				     </div>
+				     <div class="col">
+				     		87(E), Between 32 & 33 Street, <br> Chan Aye Thar San Township, Mandalay
+				     </div>
+			    </div>
+		    </div> -->
+		    <div class="col-sm-12 col-md-6 col-xl-4">
+		     	<div class="row my-3">
+		     		<div class="col col-1 ">
+		     			<a href="tel:091111111" class="text-dark"><i class="fas fa-mobile-alt fa-2x"></i></a>
+		     		</div>
+			     	<div class="col">
+			     		<a href="tel:091111111" class="text-dark text-decoration-none">+95-9-1111111</a>
+			    	</div>
+		     	</div>
 		    </div>
-		    <div class="col text-center" style="background-color: #b6def2; display: grid;">
-		    <h1 class="titlefont" style="text-align: center;">Find Us On</h1>
-		      <div class="row">
-		      	<a href="tel:091111111"><i class="fas fa-mobile-alt fa-8x mx-2" id="ph"></i></a>
-		      </div>
-		      <div class="row">
-		      	<a href="http://facebook.com"><i class="fab fa-facebook-square fa-8x mx-2" id="fb"></i></a>
-		      </div>
-		      <div class="row">
-		      	<a href="http://viber.com"><i class="fab fa-viber fa-8x mx-2" id="vb"></i></a>
-		      </div>
-		      <div class="row">
-		      	<a href="http://gmail.com"><i class="fas fa-envelope-open-text fa-8x mx-2" id="mail"></i></a>
-		      </div>
+		    <div class="col-sm-12 col-md-6 col-xl-4">
+		     	<div class="row my-3">
+			     	<div class="col col-1">
+			     		<a href="mailto:info@heavensecret.com" class="text-dark"><i class="fas fa-envelope-open-text fa-2x"></i></a>
+			     	</div>
+			     	<div class="col px-4">
+			     		<a href="mailto:mailto:info@heavensecret.com" class="text-dark text-decoration-none">mailto:info@heavensecret.com</a>
+			     	</div>
+		     	</div>
+		    </div>
+		    <div class="col-sm-12 col-md-6 col-xl-4">
+		      	<div class="row my-3">
+		     		<div class="col">
+		     			Follow on  <a href="http://facebook.com" class="text-dark">facebook</a>
+		     		</div>
+		     	</div>
 		    </div>
 		</div>
 	</div>
+
 	<!-- contact form ends -->
 	<br>
 	<!-- map starts -->
@@ -96,9 +123,9 @@
 	<!-- map ends -->
 	<br>
 	<!-- footer start -->
-      <footer class="container-fluid text-center mt-5" id="ft">
-         <div class="py-5">           
-            <a href="index.htmls" class="mx-3 mx-md-4 text-decoration-none text-dark">Home</a>
+      <footer class="container-fluid text-center mt-5 " id="ft" >
+         <div class="py-5">
+            <a href="index.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Home</a>
             <a href="artist.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Artist</a>
             <a href="gallery.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Gallery</a>
             <a href="about.html" class="mx-3 mx-md-4 text-decoration-none text-dark">About</a>
@@ -106,7 +133,7 @@
             <p class="text-dark my-3">CopyRight Heaven's Secret @ 2021</p>
             <p class="text-muted">
                <a href="tel:091111111"><i class="fas fa-mobile-alt fa-2x mx-2" id="ph"></i></a>
-               <a href="http://facebook.com"><i class="fab fa-facebook-square fa-2x mx-2" id="fb"></i></a>
+               <a href="http://facebook.com"><i class="fab fa-facebook-square fa-2x mx-2" id="facebook"></i></a>
                <a href="http://viber.com"><i class="fab fa-viber fa-2x mx-2" id="vb"></i></a>
                <a href="http://gmail.com"><i class="fas fa-envelope-open-text fa-2x mx-2" id="mail"></i></a>
             </p>
