--- a/about.html
+++ b/about.html
@@ -67,7 +67,8 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12 col-md-12 col-lg-6 col-lg-6">
-				<img src="image/guy.jpg" style="width: 100%; height: 700px;display:block ;object-fit: cover;padding: 30px;"class="rounded-circle">
+            
+				<img src="image/guy.jpg" style="width: 70%; height:400px;display:block ;object-fit: cover;padding: 30px;"class="rounded-circle mt-5 my-5">
 			</div>
 			<div class="col-sm-12 col-md-12 col-lg-6 col-lg-6" style="padding:30px;">
 				<h2 class="titlefont" style="text-align: center;">Hi! I'm Ronney!</h2>
@@ -79,9 +80,9 @@
 		</div>
 	</div>
 	<!-- footer start -->
-      <footer class="container-fluid text-center mt-5" id="ft">
+      <footer class="container-fluid text-center mt-5 " id="ft" >
          <div class="py-5">
-            <a href="index.htmls" class="mx-3 mx-md-4 text-decoration-none text-dark">Home</a>
+            <a href="index.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Home</a>
             <a href="artist.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Artist</a>
             <a href="gallery.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Gallery</a>
             <a href="about.html" class="mx-3 mx-md-4 text-decoration-none text-dark">About</a>
@@ -89,7 +90,7 @@
             <p class="text-dark my-3">CopyRight Heaven's Secret @ 2021</p>
             <p class="text-muted">
                <a href="tel:091111111"><i class="fas fa-mobile-alt fa-2x mx-2" id="ph"></i></a>
-               <a href="http://facebook.com"><i class="fab fa-facebook-square fa-2x mx-2" id="fb"></i></a>
+               <a href="http://facebook.com"><i class="fab fa-facebook-square fa-2x mx-2" id="facebook"></i></a>
                <a href="http://viber.com"><i class="fab fa-viber fa-2x mx-2" id="vb"></i></a>
                <a href="http://gmail.com"><i class="fas fa-envelope-open-text fa-2x mx-2" id="mail"></i></a>
             </p>
