--- a/artist.html
+++ b/artist.html
@@ -264,7 +264,7 @@
 	<!-- artist page end -->
 
 	<!-- footer start -->
-      <footer class="container-fluid text-center mt-5" id="ft">
+      <footer class="container-fluid text-center mt-5 " id="ft" >
          <div class="py-5">
             <a href="index.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Home</a>
             <a href="artist.html" class="mx-3 mx-md-4 text-decoration-none text-dark">Artist</a>
@@ -274,7 +274,7 @@
             <p class="text-dark my-3">CopyRight Heaven's Secret @ 2021</p>
             <p class="text-muted">
                <a href="tel:091111111"><i class="fas fa-mobile-alt fa-2x mx-2" id="ph"></i></a>
-               <a href="http://facebook.com"><i class="fab fa-facebook-square fa-2x mx-2" id="fb"></i></a>
+               <a href="http://facebook.com"><i class="fab fa-facebook-square fa-2x mx-2" id="facebook"></i></a>
                <a href="http://viber.com"><i class="fab fa-viber fa-2x mx-2" id="vb"></i></a>
                <a href="http://gmail.com"><i class="fas fa-envelope-open-text fa-2x mx-2" id="mail"></i></a>
             </p>
